# evals

./: .env.example  .gitignore  README.md  main.py  mlflow.db  pyproject.toml  server_setup.sh
dspy/: react_agent.py  simple_cot.py  simple_opt.py
feature_1/: dataset.py  gst_assigner.py  guideline_scorers.py  optimize.py  predefined_scorers.py  template_scorers.py
feature_1/prompts/: v0.py  v1.py
feature_2/: retrieval_example.py
mlartifacts/2/traces/tr-06090dfa2a92a1b229e3773136c8e89a/artifacts/: traces.json
mlartifacts/2/traces/tr-08328e9dea6a1fe6969bd1bcf0df0b6e/artifacts/: traces.json
mlartifacts/2/traces/tr-14a7edf5d74fcd639eea00a1a87e678e/artifacts/: traces.json
mlartifacts/2/traces/tr-17f5c95801e6b75c13556fc32d6930c9/artifacts/: traces.json
mlartifacts/2/traces/tr-2446c28dfc50c2a5fecd23d2ce3ffcb4/artifacts/: traces.json
mlartifacts/2/traces/tr-27bdd6259c9e7d2c3f4738445975007c/artifacts/: traces.json
mlartifacts/2/traces/tr-452b6f8d95c58f0a34458ca52d8dfec4/artifacts/: traces.json
mlartifacts/2/traces/tr-8a3ba7d8e660aebec12021f3662b71dc/artifacts/: traces.json
mlartifacts/2/traces/tr-8ecef929e3bef3e8368a2fa5a29a12f1/artifacts/: traces.json
mlartifacts/2/traces/tr-ab4ef3d7f1e21a9870d47747adad81b8/artifacts/: traces.json
mlartifacts/7/a70cb46db05a4ae09e32bc1b1fe8fd9a/artifacts/: eval_results_table.json
mlartifacts/8/c41bda3b77e5484fab1e86f99503e805/artifacts/: best_model.json  trainset.json
mlflow/: experiment_runs.py  traces_and_spans.py
mlruns/0/: meta.yaml
(+300 files in other folders)
