[project]
name = "evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.79.1",
    "mlflow>=3.5.1",
    "pandas>=2.3.3",
    "ruff>=0.14.3",
]

[tool.hatch.build.targets.wheel]
packages = ["feature_1", "mlflow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "recommended"
exclude = ["**/__pycache__", ".venv"]
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnusedCallResult = "none"
reportUnknownDecoratorType = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "D", # pydocstyle (docstring rules)
]

ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"
